<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/linearLayoutBottomSheetProfileContainer">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset_password"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconContentDescription="email"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_your_email">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendResetEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_reset_email"
        android:paddingHorizontal="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>